--- a/index.html
+++ b/index.html
@@ -20,13 +20,10 @@
       defer
       type="module"
     ></script>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
 
-    <script defer type="module" src="js/main.js"></script>
-    <link href="scss/main.scss" rel="stylesheet" />
+    <script defer type="module" src="/main.ts"></script>
+    <link href="./src/scss/main.scss" rel="stylesheet" />
   </head>
   <body>
     <div class="startpage-container">
