(refactor): update createToDoList

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
       <h1>Things to do today:</h1>
       <div class="input" id="input-container">
         <input type="text" id="user-input" placeholder="" class="input__text" />
+        <button id="input-btn" class="input__button">+</button>
       </div>
-      <div id="uncompleted-tasks">
+      <div id="uncompleted-tasks" class="list-container">
         <button id="sort-btn" class="btn">Sort a-z</button>
       </div>
       <button id="clear-btn" class="btn">Clear list</button>
